# python-copilot-cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.system}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  main.py  pyproject.toml
{{cookiecutter.system}}/.devcontainer/: devcontainer.json  docker-compose.yml
